---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/try_stmt_invalid_order.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..47,
        body: [
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 0..31,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 9..13,
                            },
                        ),
                    ],
                    handlers: [],
                    orelse: [],
                    finalbody: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 27..31,
                            },
                        ),
                    ],
                    is_star: false,
                    runtime_body: None,
                    runtime_handlers: None,
                    runtime_orelse: None,
                    runtime_finalbody: None,
                },
            ),
            Pass(
                StmtPass {
                    node_index: NodeIndex(None),
                    range: 42..46,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
3 | finally:
4 |     pass
5 | else:
  | ^^^^ Syntax Error: `else` block must come before `finally` block
6 |     pass
  |


  |
3 | finally:
4 |     pass
5 | else:
  |     ^ Syntax Error: invalid syntax
6 |     pass
  |


  |
3 | finally:
4 |     pass
5 | else:
  |      ^ Syntax Error: invalid syntax
6 |     pass
  |


  |
4 |     pass
5 | else:
6 |     pass
  | ^^^^ Syntax Error: unexpected indentation
